Hide scrollbar in navbarTeacher, bug fix in contest View

--- a/src/main/webapp/resources/css/navbarTeacherStyle.css
+++ b/src/main/webapp/resources/css/navbarTeacherStyle.css
@@ -78,6 +78,11 @@ ul.list span
 	list-style: none;
 }
 
+#leftsidebar>.menu
+{
+	overflow-y: hidden;
+}
+
 #leftsidebar>.menu ul ul
 {
 	display: none;
